# itk-configuration-utility

./: CODEOWNERS  MANIFEST.in  README.md  TODO.md  pyproject.toml
itkconfigurator/: customclasses.py  example-itk.env  itkschema.yaml  main.py  mcm.env  mcmClient.py  mojaloop-connector.env  pkitools.py  requirements.txt  servicemanager.py
test/: test_pkitools.py
